# Workspace root for Rust functional tests.
# Includes the generated project crates + our functional test crate.
# The generated tested_project/Cargo.toml is removed after generation
# so that this file is the sole workspace root.

[workspace]
members = [
    "tested_project/crates/common",
    "tested_project/crates/direct_access",
    "tested_project/crates/macros",
    "functional",
]
resolver = "3"

[workspace.package]
homepage = ""
repository = ""
license = "choose it yourself"
edition = "2024"
version = "0.0.1"

[workspace.dependencies]
thiserror = "2.0"
anyhow = "1.0"
flume = "0.12"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints.rust]
