# Workspace root for Rust functional tests.
# Includes the generated project crates + our functional test crate.
# The generated tested_project/Cargo.toml is removed after generation
# so that this file is the sole workspace root.

[workspace]
members = [
    "tested_project/crates/common",
    "tested_project/crates/direct_access",
    "tested_project/crates/macros",
    "tested_project/crates/project_management",
    "tested_project/crates/task_management",
    "functional",
]
resolver = "3"

[workspace.package]
homepage = ""
repository = ""
license = "choose it yourself"
edition = "2024"
version = "0.0.1"

[workspace.dependencies]
thiserror = "2.0"
anyhow = "1.0"
flume = "0.12"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Internal crates (must match generated package names)
common = { package = "full-rust-app-common", version = "0.0.1", path = "tested_project/crates/common" }
macros = { package = "full-rust-app-macros", version = "0.0.1", path = "tested_project/crates/macros" }
direct_access = { package = "full-rust-app-direct-access", version = "0.0.1", path = "tested_project/crates/direct_access" }
project_management = { package = "full-rust-app-project-management", version = "0.0.1", path = "tested_project/crates/project_management" }
task_management = { package = "full-rust-app-task-management", version = "0.0.1", path = "tested_project/crates/task_management" }

[workspace.lints.rust]
