[package]
name = "qleany"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "svelte_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.5.0"
log = "0.4"

common = { path = "../../common" }
direct_access = { path = "../../direct_access" }
handling_manifest = { path = "../../handling_manifest" }
rust_file_generation = { path = "../../rust_file_generation" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 0 # s Prioritizes small binary size. Use `3` if you prefer speed.
panic = "unwind" # panic Higher performance by disabling panic handlers.
strip = "none"  # true Ensures debug symbols are removed.
