[package]
name = "functional-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
common = { workspace = true }
direct_access = { workspace = true }
project_management = { workspace = true }
task_management = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
